src/main/d96/parser/.antlr/D96Parser.py
# Generated from c:\Users\ADMIN\Desktop\assignment2\src\main\d96\parser\D96.g4 by ANTLR 4.8
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class D96Parser ( Parser ):

    grammarFileName = "D96.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'Break'", "'Continue'", "'If'", "'Elseif'", 
                     "'Else'", "'Foreach'", "'True'", "'False'", "'Array'", 
                     "'In'", "'Int'", "'Float'", "'Boolean'", "'String'", 
                     "'Return'", "'Null'", "'Class'", "'Val'", "'Var'", 
                     "'Self'", "'Constructor'", "'Destructor'", "'New'", 
                     "'By'", "'('", "')'", "'['", "']'", "'.'", "','", "';'", 
                     "'{'", "'}'", "':'", "'+'", "'-'", "'*'", "'/'", "'%'", 
                     "'!'", "'&&'", "'||'", "'=='", "'='", "'!='", "'>'", 
                     "'>='", "'<'", "'<='", "'==.'", "'+.'", "'::'", "'..'" ]

    symbolicNames = [ "<INVALID>", "BREAK", "CONTINUE", "IF", "ELSEIF", 
                      "ELSE", "FOREACH", "TRUE", "FALSE", "ARRAY", "IN", 
                      "INT", "FLOAT", "BOOLEAN", "STRING", "RETURN", "NULL", 
                      "CLASS", "VAL", "VAR", "SELF", "CONSTRUCTOR", "DESTRUCTOR", 
                      "NEW", "BY", "LB", "RB", "LS", "RS", "DOT", "COMMA", 
                      "SEMI", "LP", "RP", "COLON", "ADD", "MINUS", "MUL", 
                      "DIV", "MOD", "NOT", "AND", "OR", "EQUAL", "ASSIGN", 
                      "DIFF", "GT", "GTE", "LT", "LTE", "STREQ", "STRADD", 
                      "DOUBLECOLON", "DOUBLEDOT", "ZERO", "DECINT", "OCTINT", 
                      "HEXINT", "BIINT", "FLOATLIT", "STRINGLIT", "ID", 
                      "DOLLAR_ID", "COMMENT", "WS", "ERROR_CHAR", "UNCLOSE_STRING", 
                      "ILLEGAL_ESCAPE" ]

    RULE_program = 0
    RULE_classDeclaration = 1
    RULE_classBody = 2
    RULE_attrDeclaration = 3
    RULE_attrWithAssign = 4
    RULE_attrPair = 5
    RULE_attrWithoutAssign = 6
    RULE_attrList = 7
    RULE_identifier = 8
    RULE_typeName = 9
    RULE_methodDeclaration = 10
    RULE_paraList = 11
    RULE_paraDeclaration = 12
    RULE_idList = 13
    RULE_primitiveType = 14
    RULE_arrayType = 15
    RULE_elementType = 16
    RULE_classType = 17
    RULE_stmt = 18
    RULE_declarationStmt = 19
    RULE_declarationWithAssign = 20
    RULE_declarationPair = 21
    RULE_declarationWithoutAssign = 22
    RULE_varList = 23
    RULE_assignStmt = 24
    RULE_assignLHS = 25
    RULE_scalar = 26
    RULE_indexOperation = 27
    RULE_indexHead = 28
    RULE_ifStmt = 29
    RULE_ifBody = 30
    RULE_forInStmt = 31
    RULE_breakStmt = 32
    RULE_continueStmt = 33
    RULE_returnStmt = 34
    RULE_instanceCall = 35
    RULE_staticCall = 36
    RULE_blockStmt = 37
    RULE_exp = 38
    RULE_exp1 = 39
    RULE_exp2 = 40
    RULE_exp3 = 41
    RULE_exp4 = 42
    RULE_exp5 = 43
    RULE_exp6 = 44
    RULE_exp7 = 45
    RULE_exp8 = 46
    RULE_exp9 = 47
    RULE_exp10 = 48
    RULE_exp11 = 49
    RULE_expList = 50
    RULE_operand = 51
    RULE_indexArray = 52
    RULE_arrayBody = 53
    RULE_arrayLit = 54
    RULE_intLit = 55
    RULE_booleanLit = 56

    ruleNames =  [ "program", "classDeclaration", "classBody", "attrDeclaration", 
                   "attrWithAssign", "attrPair", "attrWithoutAssign", "attrList", 
                   "identifier", "typeName", "methodDeclaration", "paraList", 
                   "paraDeclaration", "idList", "primitiveType", "arrayType", 
                   "elementType", "classType", "stmt", "declarationStmt", 
                   "declarationWithAssign", "declarationPair", "declarationWithoutAssign", 
                   "varList", "assignStmt", "assignLHS", "scalar", "indexOperation", 
                   "indexHead", "ifStmt", "ifBody", "forInStmt", "breakStmt", 
                   "continueStmt", "returnStmt", "instanceCall", "staticCall", 
                   "blockStmt", "exp", "exp1", "exp2", "exp3", "exp4", "exp5", 
                   "exp6", "exp7", "exp8", "exp9", "exp10", "exp11", "expList", 
                   "operand", "indexArray", "arrayBody", "arrayLit", "intLit", 
                   "booleanLit" ]

    EOF = Token.EOF
    BREAK=1
    CONTINUE=2
    IF=3
    ELSEIF=4
    ELSE=5
    FOREACH=6
    TRUE=7
    FALSE=8
    ARRAY=9
    IN=10
    INT=11
    FLOAT=12
    BOOLEAN=13
    STRING=14
    RETURN=15
    NULL=16
    CLASS=17
    VAL=18
    VAR=19
    SELF=20
    CONSTRUCTOR=21
    DESTRUCTOR=22
    NEW=23
    BY=24
    LB=25
    RB=26
    LS=27
    RS=28
    DOT=29
    COMMA=30
    SEMI=31
    LP=32
    RP=33
    COLON=34
    ADD=35
    MINUS=36
    MUL=37
    DIV=38
    MOD=39
    NOT=40
    AND=41
    OR=42
    EQUAL=43
    ASSIGN=44
    DIFF=45
    GT=46
    GTE=47
    LT=48
    LTE=49
    STREQ=50
    STRADD=51
    DOUBLECOLON=52
    DOUBLEDOT=53
    ZERO=54
    DECINT=55
    OCTINT=56
    HEXINT=57
    BIINT=58
    FLOATLIT=59
    STRINGLIT=60
    ID=61
    DOLLAR_ID=62
    COMMENT=63
    WS=64
    ERROR_CHAR=65
    UNCLOSE_STRING=66
    ILLEGAL_ESCAPE=67

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.8")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(D96Parser.EOF, 0)

        def classDeclaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(D96Parser.ClassDeclarationContext)
            else:
                return self.getTypedRuleContext(D96Parser.ClassDeclarationContext,i)


        def getRuleIndex(self):
            return D96Parser.RULE_program




    def program(self):

        localctx = D96Parser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 115 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 114
                self.classDeclaration()
                self.state = 117 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==D96Parser.CLASS):
                    break

            self.state = 119
            self.match(D96Parser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ClassDeclarationContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CLASS(self):
            return self.getToken(D96Parser.CLASS, 0)

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(D96Parser.ID)
            else:
                return self.getToken(D96Parser.ID, i)

        def LP(self):
            return self.getToken(D96Parser.LP, 0)

        def classBody(self):
            return self.getTypedRuleContext(D96Parser.ClassBodyContext,0)


        def RP(self):
            return self.getToken(D96Parser.RP, 0)

        def COLON(self):
            return self.getToken(D96Parser.COLON, 0)

        def getRuleIndex(self):
            return D96Parser.RULE_classDeclaration




    def classDeclaration(self):

        localctx = D96Parser.ClassDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_classDeclaration)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 121
            self.match(D96Parser.CLASS)
            self.state = 122
            self.match(D96Parser.ID)
            self.state = 125
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==D96Parser.COLON:
                self.state = 123
                self.match(D96Parser.COLON)
                self.state = 124
                self.match(D96Parser.ID)


            self.state = 127
            self.match(D96Parser.LP)
            self.state = 128
            self.classBody()
            self.state = 129
            self.match(D96Parser.RP)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ClassBodyContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def attrDeclaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(D96Parser.AttrDeclarationContext)
            else:
                return self.getTypedRuleContext(D96Parser.AttrDeclarationContext,i)


        def methodDeclaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(D96Parser.MethodDeclarationContext)
            else:
                return self.getTypedRuleContext(D96Parser.MethodDeclarationContext,i)


        def getRuleIndex(self):
            return D96Parser.RULE_classBody




    def classBody(self):

        localctx = D96Parser.ClassBodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_classBody)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 135
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << D96Parser.VAL) | (1 << D96Parser.VAR) | (1 << D96Parser.CONSTRUCTOR) | (1 << D96Parser.DESTRUCTOR) | (1 << D96Parser.ID) | (1 << D96Parser.DOLLAR_ID))) != 0):
                self.state = 133
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [D96Parser.VAL, D96Parser.VAR]:
                    self.state = 131
                    self.attrDeclaration()
                    pass
                elif token in [D96Parser.CONSTRUCTOR, D96Parser.DESTRUCTOR, D96Parser.ID, D96Parser.DOLLAR_ID]:
                    self.state = 132
                    self.methodDeclaration()
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 137
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AttrDeclarationContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SEMI(self):
            return self.getToken(D96Parser.SEMI, 0)

        def VAL(self):
            return self.getToken(D96Parser.VAL, 0)

        def VAR(self):
            return self.getToken(D96Parser.VAR, 0)

        def attrWithAssign(self):
            return self.getTypedRuleContext(D96Parser.AttrWithAssignContext,0)


        def attrWithoutAssign(self):
            return self.getTypedRuleContext(D96Parser.AttrWithoutAssignContext,0)


        def getRuleIndex(self):
            return D96Parser.RULE_attrDeclaration




    def attrDeclaration(self):

        localctx = D96Parser.AttrDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_attrDeclaration)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 138
            _la = self._input.LA(1)
            if not(_la==D96Parser.VAL or _la==D96Parser.VAR):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 141
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.state = 139
                self.attrWithAssign()
                pass

            elif la_ == 2:
                self.state = 140
                self.attrWithoutAssign()
                pass


            self.state = 143
            self.match(D96Parser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AttrWithAssignContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def identifier(self):
            return self.getTypedRuleContext(D96Parser.IdentifierContext,0)


        def attrPair(self):
            return self.getTypedRuleContext(D96Parser.AttrPairContext,0)


        def exp(self):
            return self.getTypedRuleContext(D96Parser.ExpContext,0)


        def getRuleIndex(self):
            return D96Parser.RULE_attrWithAssign




    def attrWithAssign(self):

        localctx = D96Parser.AttrWithAssignContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_attrWithAssign)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 145
            self.identifier()
            self.state = 146
            self.attrPair()
            self.state = 147
            self.exp(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AttrPairContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(D96Parser.COMMA)
            else:
                return self.getToken(D96Parser.COMMA, i)

        def identifier(self):
            return self.getTypedRuleContext(D96Parser.IdentifierContext,0)


        def attrPair(self):
            return self.getTypedRuleContext(D96Parser.AttrPairContext,0)


        def exp(self):
            return self.getTypedRuleContext(D96Parser.ExpContext,0)


        def COLON(self):
            return self.getToken(D96Parser.COLON, 0)

        def typeName(self):
            return self.getTypedRuleContext(D96Parser.TypeNameContext,0)


        def ASSIGN(self):
            return self.getToken(D96Parser.ASSIGN, 0)

        def getRuleIndex(self):
            return D96Parser.RULE_attrPair




    def attrPair(self):

        localctx = D96Parser.AttrPairContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_attrPair)
        try:
            self.state = 159
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [D96Parser.COMMA]:
                self.enterOuterAlt(localctx, 1)
                self.state = 149
                self.match(D96Parser.COMMA)
                self.state = 150
                self.identifier()
                self.state = 151
                self.attrPair()
                self.state = 152
                self.exp(0)
                self.state = 153
                self.match(D96Parser.COMMA)
                pass
            elif token in [D96Parser.COLON]:
                self.enterOuterAlt(localctx, 2)
                self.state = 155
                self.match(D96Parser.COLON)
                self.state = 156
                self.typeName()
                self.state = 157
                self.match(D96Parser.ASSIGN)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AttrWithoutAssignContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def attrList(self):
            return self.getTypedRuleContext(D96Parser.AttrListContext,0)


        def COLON(self):
            return self.getToken(D96Parser.COLON, 0)

        def typeName(self):
            return self.getTypedRuleContext(D96Parser.TypeNameContext,0)


        def getRuleIndex(self):
            return D96Parser.RULE_attrWithoutAssign




    def attrWithoutAssign(self):

        localctx = D96Parser.AttrWithoutAssignContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_attrWithoutAssign)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 161
            self.attrList()
            self.state = 162
            self.match(D96Parser.COLON)
            self.state = 163
            self.typeName()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AttrListContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def identifier(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(D96Parser.IdentifierContext)
            else:
                return self.getTypedRuleContext(D96Parser.IdentifierContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(D96Parser.COMMA)
            else:
                return self.getToken(D96Parser.COMMA, i)

        def getRuleIndex(self):
            return D96Parser.RULE_attrList




    def attrList(self):

        localctx = D96Parser.AttrListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_attrList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 165
            self.identifier()
            self.state = 170
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==D96Parser.COMMA:
                self.state = 166
                self.match(D96Parser.COMMA)
                self.state = 167
                self.identifier()
                self.state = 172
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IdentifierContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(D96Parser.ID, 0)

        def DOLLAR_ID(self):
            return self.getToken(D96Parser.DOLLAR_ID, 0)

        def getRuleIndex(self):
            return D96Parser.RULE_identifier




    def identifier(self):

        localctx = D96Parser.IdentifierContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_identifier)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 173
            _la = self._input.LA(1)
            if not(_la==D96Parser.ID or _la==D96Parser.DOLLAR_ID):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TypeNameContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def primitiveType(self):
            return self.getTypedRuleContext(D96Parser.PrimitiveTypeContext,0)


        def arrayType(self):
            return self.getTypedRuleContext(D96Parser.ArrayTypeContext,0)


        def classType(self):
            return self.getTypedRuleContext(D96Parser.ClassTypeContext,0)


        def getRuleIndex(self):
            return D96Parser.RULE_typeName




    def typeName(self):

        localctx = D96Parser.TypeNameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_typeName)
        try:
            self.state = 178
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [D96Parser.INT, D96Parser.FLOAT, D96Parser.BOOLEAN, D96Parser.STRING]:
                self.enterOuterAlt(localctx, 1)
                self.state = 175
                self.primitiveType()
                pass
            elif token in [D96Parser.ARRAY]:
                self.enterOuterAlt(localctx, 2)
                self.state = 176
                self.arrayType()
                pass
            elif token in [D96Parser.ID]:
                self.enterOuterAlt(localctx, 3)
                self.state = 177
                self.classType()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MethodDeclarationContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def blockStmt(self):
            return self.getTypedRuleContext(D96Parser.BlockStmtContext,0)


        def identifier(self):
            return self.getTypedRuleContext(D96Parser.IdentifierContext,0)


        def LB(self):
            return self.getToken(D96Parser.LB, 0)

        def RB(self):
            return self.getToken(D96Parser.RB, 0)

        def CONSTRUCTOR(self):
            return self.getToken(D96Parser.CONSTRUCTOR, 0)

        def DESTRUCTOR(self):
            return self.getToken(D96Parser.DESTRUCTOR, 0)

        def paraList(self):
            return self.getTypedRuleContext(D96Parser.ParaListContext,0)


        def getRuleIndex(self):
            return D96Parser.RULE_methodDeclaration




    def methodDeclaration(self):

        localctx = D96Parser.MethodDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_methodDeclaration)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 196
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [D96Parser.ID, D96Parser.DOLLAR_ID]:
                self.state = 180
                self.identifier()
                self.state = 181
                self.match(D96Parser.LB)
                self.state = 183
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==D96Parser.ID:
                    self.state = 182
                    self.paraList()


                self.state = 185
                self.match(D96Parser.RB)
                pass
            elif token in [D96Parser.CONSTRUCTOR]:
                self.state = 187
                self.match(D96Parser.CONSTRUCTOR)
                self.state = 188
                self.match(D96Parser.LB)
                self.state = 190
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==D96Parser.ID:
                    self.state = 189
                    self.paraList()


                self.state = 192
                self.match(D96Parser.RB)
                pass
            elif token in [D96Parser.DESTRUCTOR]:
                self.state = 193
                self.match(D96Parser.DESTRUCTOR)
                self.state = 194
                self.match(D96Parser.LB)
                self.state = 195
                self.match(D96Parser.RB)
                pass
            else:
                raise NoViableAltException(self)

            self.state = 198
            self.blockStmt()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParaListContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def paraDeclaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(D96Parser.ParaDeclarationContext)
            else:
                return self.getTypedRuleContext(D96Parser.ParaDeclarationContext,i)


        def SEMI(self, i:int=None):
            if i is None:
                return self.getTokens(D96Parser.SEMI)
            else:
                return self.getToken(D96Parser.SEMI, i)

        def getRuleIndex(self):
            return D96Parser.RULE_paraList




    def paraList(self):

        localctx = D96Parser.ParaListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_paraList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 200
            self.paraDeclaration()
            self.state = 205
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==D96Parser.SEMI:
                self.state = 201
                self.match(D96Parser.SEMI)
                self.state = 202
                self.paraDeclaration()
                self.state = 207
                self._errHandler.sync(self)
                _la = self._input.LA(1)
